Fixed card text overflow issue

--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -12,7 +12,7 @@
     justify-content: center;
   }
 
-  .card {
+  .card-product-card {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -26,11 +26,4 @@
     margin: 0 2rem;
   }
 }
-
-/* @media only screen and (max-width: 900px) and (min-width: 375px) {
-  .hotness {
-    font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
-    border: 2px solid black;
-  }
-} */
 
